<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Project wide strings -->
    <string name="app_name">SnapLapse</string>
    <string name="action_settings">Settings</string>
    <string name="numeric_hint">1</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>

    <!-- Activity strings -->
    <string name="title_activity_take_picture">Take a Picture</string>
    <string name="title_activity_create_project">Create a Project</string>
    <string name="title_activity_open_project">Work with a Project</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_remove">Remove Project</string>
    <string name="title_activity_view_project">View a Project</string>
     <string name="title_activity_slide_show">Slide Show</string>

    <!-- Main menu strings -->
    <string name="txt_main_menu">Main Menu</string>
    <string name="btn_create_project">Create</string>
    <string name="btn_open_project">Project</string>
    <string name="btn_delete_project">Remove</string>
    <string name="btn_view_project">View</string>
    <string name="btn_desc_create_project">Start a new project</string>
    <string name="btn_desc_open_project">Work with your project</string>
    <string name="btn_desc_delete_project">Delete a project</string>
    <string name="btn_desc_view_project">Watch a project slideshow</string>

    <!-- Create Project strings -->
    <string name="txt_create_project">Create a Project</string>
    <string name="txt_project_name">Project Name</string>
    <string name="txt_time_interval">Notify Interval</string>
    <string name="txt_project_desc">Description</string>
    <string name="hint_project_name">Name your project</string>
    <string name="hint_project_description">A brief description</string>

    <!-- Open/Remove Project strings -->
    <string name="txt_select_project">Select a Project</string>
    <string name="cd_project_preview">Project preview</string>
    <string name="btn_create_new_project">Create a new Project</string>
    <string name="dlg_remove_title">Remove this project?</string>
    <string name="dlg_warning_msg">This will delete the project.</string>
    <string name="dlg_confirmation">Are you sure?</string>
    <string name="dlg_delete_images">Delete images?</string>

     <!-- SlideShow Activity strings -->
    <string name="txt_loading">Preparing Slideshow #8230;.</string>
    
    <!-- Button Common Strings -->
    <string name="btn_remove_project">Remove this Project</string>
    <string name="btn_create_submit">Create this Project</string>

    <!-- Camera View strings -->
    <string name="cd_preview_overlay">Image overlay</string>
    <string name="btn_view_slideshow">View</string>
    <string name="txt_tog_preview">Past Preview</string>

    <!-- String array resources -->
    <string-array name="time_interval_reminder">
        <item>minutes</item>
        <item>hours</item>
        <item>days</item>
        <item>months</item>
        <item>weeks</item>
    </string-array>

   

</resources>
