<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".CreateProjectActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/txt_create_project"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#f1f1f1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="10"
        android:background="@drawable/menu_button_shape"
        android:orientation="vertical" >

        <!-- Name Field -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                style="@style/FormText_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_project_name" />

            <EditText
                android:id="@+id/et_project_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_project_name"
                android:inputType="textCapWords" />
        </LinearLayout>
        <!-- Description Field -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                style="@style/FormText_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_project_desc" />

            <EditText
                android:id="@+id/et_project_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_project_description"
                android:inputType="text" />
        </LinearLayout>

        <!-- Interval Field -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                style="@style/FormText_Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_time_interval" />

            <EditText
                android:id="@+id/et_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/numeric_hint"
                android:inputType="number" />

            <Spinner
                android:id="@+id/sp_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/time_interval_reminder"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_project_submit"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/submit_button_shape"
        android:drawableLeft="@drawable/ico_add"
        android:text="@string/btn_create_submit" />

</LinearLayout>