<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="Menu"
        android:textColor="#f1f1f1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_create"
        android:drawableLeft="@drawable/ico_add"
        android:background="@drawable/menu_button_shape"
        style="@style/MenuTheme_Button"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:text="@string/btn_create_project"
        android:gravity="top"
         />

    <Button
        android:id="@+id/btn_open"
        android:drawableLeft="@drawable/ico_edit"
        android:background="@drawable/menu_button_shape"
        style="@style/MenuTheme_Button"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:text="@string/btn_open_project"
  
        />

    <Button
        android:id="@+id/btn_remove"
        android:drawableLeft="@drawable/ico_delete"
        android:background="@drawable/menu_button_shape"
        style="@style/MenuTheme_Button"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:text="@string/btn_delete_project"
       
        />

    <Button
        android:id="@+id/btn_view"
        android:drawableLeft="@drawable/ico_view"
        android:background="@drawable/menu_button_shape"
        style="@style/MenuTheme_Button"
        android:layout_weight="1"
        android:paddingLeft="30dp"
        android:text="@string/btn_view_project" />

</LinearLayout>